Fixed feedback page size on mobile

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -84,7 +84,7 @@ textarea {
   /* textarea {
     height: 50%;
   } */
-  body {
+  h1 {
     background-color: red;
   }
 }
